desktop media query is done, mobile media query is initiated.

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,8 +1,9 @@
 .Entrees{
   display: flex;
   flex-direction: row;
-  margin: 61px 42px 74px 75px;
   align-items: center;
+  justify-content: space-around;
+  margin: 30px auto;
 }
 
 .icons{
@@ -13,51 +14,85 @@ padding: 0 2px;
 
 .IG, .FB, .TW{
 width: 71px;
-height: 59px;
+height: 39px;
+}
+
+.bottom-head{
+  display: none;
+}
+
+.RectangleA {
+  width: 60vw;
+  height: 12.5px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.5);
+  background-color:darkred;
+}
+
+.RectangleB {
+  width: 60vw;
+  height: 12.5px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.5);
+  background-color:rgb(170,0,0);
+}
+
+
+.RectangleX{
+  background-color: darkred;
+  margin-left: auto;
+  margin-right: auto;
+  width: 85vw;
+  height: 12.5px;
+}
+
+.RectangleY{
+  background-color: rgb(170,0,0);
+  margin-left: auto;
+  margin-right: auto;
+  width: 85vw;
+  height: 12.5px;
 }
 
 
 
 .Rectangle-Reserve {
-    width: 223px;
-    height: 55px;
-    border-radius: 6px;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
-    border: solid 5px var(--black);
-
-}
-
-.RESERVE {
-  width: 169px;
-  height: 45px;
   font-family: Muli-Italic_;
-  font-size: 30px;
-  font-weight: bold;
+  font-size: 14pt;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-weight: bolder;
   font-stretch: normal;
   font-style: italic;
   line-height: normal;
   letter-spacing: normal;
+  border-color: black;
+  border-style: solid;
   text-align: center;
   color: var(--black);
+  border-radius: 5px;
 }
 
-.Rectangle1 {
-  width: 60vw;
-  height: 29px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.5);
-  background-color:darkred;
+
+.RESERVE{
+  line-height: 2.2;
+  margin:-5px 0 -5px 0;
 }
+
+
+
+
+
+
 
 .main{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 10 10 10 10;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+  margin-bottom: 50px;
 }
 
 .logo{
-  width: 90%;
-  height: 100%;
+  width: 425px;
 }
 
 
@@ -66,4 +101,292 @@ height: 59px;
   height: 29px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.5);
   background-color:darkred;
+}
+
+
+.Rectangle1.5{
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+}
+
+
+
+.About-us{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 30px auto;
+}
+
+.about-head{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.about-r{
+  background-color: darkred;
+  width: 27vw;
+  height: 12.5px;
+}
+
+.about-l{
+  background-color: darkred;
+  width: 27vw;
+  height: 12.5px;
+}
+
+.about-text{
+  font-size: 26pt;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: italic;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  background-color: white;
+}
+
+.Rectangle3{  
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+}
+
+.top{
+  background-color: darkred;
+  width: 85vw;
+  height: 12.5px;
+}
+
+.bottom{
+  background-color: rgb(170,0,0);
+  width: 85vw;
+  height: 12.5px;
+}
+
+
+
+
+
+
+
+.box{
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: row;
+  width: 80vw;
+  justify-content: space-between;
+}
+
+
+.box1{
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  width: 20vw;
+  padding: 20px 0;
+}
+
+
+.money{
+  background-color: darkred;
+  color: white;
+  font-weight: bold;
+  line-height: 2.2;
+  border-radius: 5px;
+  margin: 0;
+}
+
+.box2{
+  border-left: solid rgba(0, 0, 0, 0.5);
+  padding: 10px 10px 0 25px;
+  justify-content: flex-end;
+}
+
+.logo{
+  width: 80%;
+
+}
+
+
+
+
+@media only screen and (max-width: 600px){
+  .Entrees{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin: 30px auto;
+
+  }
+  
+  .icons{
+  display: flex;
+  flex-direction: row;
+  padding: 0 2px;
+  }
+  
+  .IG, .FB, .TW{
+  width: 30px;
+  height: 20px;
+  }
+  
+
+  .RectangleA {
+    display: none
+  }
+  
+  .RectangleB {
+    display: none;
+  }
+
+  .bottom-head{
+    display: inline;
+    background-color: black;
+  }
+  
+
+  .main{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 55%;
+    margin-bottom: 50px;
+  }
+
+  .logo{
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 auto;
+    height: 50vh;
+    width:60vw;
+  }
+
+  .RectangleX{
+    background-color: darkred;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100vw;
+    height: 12.5px;
+  }
+  
+  .RectangleY{
+    background-color: rgb(170,0,0);
+    margin-left: auto;
+    margin-right: auto;
+    width: 100vw;
+    height: 12.5px;
+  }
+
+
+
+
+
+
+  .About-us{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 30px auto;
+  }
+  
+  .about-head{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  
+  .about-r{
+    background-color: darkred;
+    width: 27vw;
+    height: 12.5px;
+  }
+  
+  .about-l{
+    background-color: darkred;
+    width: 27vw;
+    height: 12.5px;
+  }
+  
+  .about-text{
+    font-size: 26pt;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: italic;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: center;
+    background-color: white;
+  }
+  
+  .Rectangle3{  
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+  }
+  
+  .top{
+    background-color: darkred;
+    width: 85vw;
+    height: 12.5px;
+  }
+  
+  .bottom{
+    background-color: rgb(170,0,0);
+    width: 85vw;
+    height: 12.5px;
+  }
+  
+  
+  
+  
+  
+  .About-us{
+    display: flex;
+    flex-direction: column;
+    padding: 0 0;
+  }
+  
+  .box{
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    width: 80vw;
+    justify-content: space-between;
+  }
+  
+  
+  .box1{
+    display: flex;
+    width: 80vw;
+    padding: 20px 0;
+  }
+  
+  
+  .money{
+    background-color: darkred;
+    color: white;
+    font-weight: bold;
+    line-height: 2.2;
+    border-radius: 5px;
+    margin: 0;
+  }
+  
+  .box2{
+    border-left: solid rgba(0, 0, 0, 0.5);
+    padding: 10px 10px 0 25px;
+    justify-content: flex-end;
+  }
+  
+
 }
