--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   align-content:  center;
+
 }
 
 .Divider1 {
@@ -20,19 +21,26 @@
   background-color:#900010;
 }
 
-.GalleryHeading {
+.left-heading-strip {
   width: 40vw;
-  height: 1vh;
+  height: 1.25vh;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.5);
-  background-image: linear-gradient(91deg, #a8091a 50%, #a8091a 86%);
-
+  background-image: linear-gradient(91deg, #a8091a 50%, #a8091a 86%)
 
 }
-.Gallery {
+.right-heading-strip {
+  width: 40vw;
+  height: 1.25vh;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.5);
+  background-image: linear-gradient(91deg, #a8091a 50%, #a8091a 86%)
+
+}
+
+.ComponentHeading {
   display: flex;
   justify-content: center;
   align-items:center;
-  width: 25vw;
+  /* width: 25vw; */
   height: 1vh;
   font-family: Muli;
   font-size: 3vw;
@@ -43,11 +51,12 @@
   letter-spacing: normal;
   text-align: center;
   color: black; 
+  margin: 0.5vh 1vw;
 }
 
-.Gal{
+.heading-container{
   display: flex;
-  margin: 1vw 0;
+  margin: 3vh 0 2vh 0;
   width: 80vw;
   justify-content: center;
   align-items: center;
@@ -63,18 +72,42 @@
   letter-spacing: normal;
   text-align: center;
   color: #a8091a;
-  margin: 0 1vw;
+  margin: 1vh 1vw ;
+  
  
  
 }
 
 .Footer {
-  width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  width: 80vw;
   height: 12vh;
   box-shadow: 4px 2px 4px 0 rgba(0, 0, 0, 0.5);
   background-color: #a8091a;
   margin-top: 5vh;
+  padding-left:10vw;
+  padding-right: 10vw;
+  padding-top: 2vh;
+  color: white;
+  font-size: 1vw;
+  font-family: Muli;
+  font-weight: bold;
+  font-stretch: normal;
+  /* font-style: italic; */
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
 }
+.footer-icon{
+  color: white;
+  font-size: 2vw;
+}
+input{
+  margin: 1vh 1vw;
+  width: 15vw;
+}
+
 
 .Visit{
   display: flex;
@@ -93,8 +126,8 @@
 
 .line{
     width: 0vw;
-    height: 15vh;
-    border: solid 0.2vw #979797;
+    height: 13vh;
+    border: solid 0.1vw #979797;
     margin-bottom: 2vh;  
     background-color: #979797;
 }
@@ -166,25 +199,122 @@ justify-content: center;
 }
 
 .gallery-images{
- 
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
   margin-bottom: 2vh;
+  padding: 0vh 10vw;
 }
 
 .gallery-image-container{
-  width: 20vw;
-  height: 30vh;
+  width: 10vw;
+  height: 20vh;
   margin: 3vh 3vw ;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
 .selected-image{
-  width: 35vw;
-  height: 45vh;
+  width: 25vw;
+  height: 30vh;
   margin: 5vh 3vw ;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
+
+img:hover{
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+
+@media only screen and (max-width:600px )
+{
+  .gallery-container, .Divider1, .Divider2{
+    width: 100vw;
+  }
+
+  .time{
+    line-height: 2.5vh;
+    width: 55vw;
+    height: 17vh;
+    font-size: 3.5vw;
+  }
+  .days{
+    height: 15vh;  
+    font-size: 3.5vw;
+    line-height: 2.5vh;
+  }
+  .footer-icon{
+    font-size: 5vw;
+  }
+  .Footer{
+    font-size: 5vw;
+  }
+  input{
+    width: 40vw;
+  }
+  .line{
+    height: 9vh;
+  }
+  .left-heading-strip{
+    width: 0;
+  }
+  .right-heading-strip
+  {
+ width: 100%;
+    height:3vh;
+    margin-right: 4vw;
+}
+  .heading-container
+  {
+    color: #900010;
+    justify-content: flex-start;
+    width: 100vw;
+  }
+  .ComponentHeading
+ {
+    font-size: 10vw;
+    font-weight: bold;
+    color: #900010;
+    justify-content: flex-start;
+    padding-left: 3vw;
+    padding-right: 5%;
+  }
+  .gallery-container{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center
+  }
+  
+  .gallery-images{
+    padding: 0vh 0vw;
+  }
+  
+  .gallery-image-container{
+    width: 22vw;
+    height: 10vh;
+    margin: 2vh 4vw ;
+   
+  }
+  .horizontal-line{
+    width: 90vw;
+    height: 0.25vh;
+    border: solid 0.1vw #a8091a;
+    background-color: #a8091a;
+  }
+  .selected-image{
+    width: 60vw;
+    max-height: 25vh;
+    margin: 2vh 2vw ;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.5);
+  }
+  .icons{
+    font-size: 10vw;
+    margin-left:2vw;
+    margin-right: 3vw;
+  }
+}
