--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -55,6 +55,7 @@ body {
   justify-content: center;
   border-bottom: 1.5rem dotted #900010;
   margin: 5vw;
+  padding: 1vh;
   
   
   
@@ -188,12 +189,18 @@ margin: 0;
   font-size: 15vw;
   margin: 0;
 }
+.buttons {
+flex-wrap: wrap;
+}
+
 
 .buttons1 {
-  display: grid;
+ padding: 1vw;
   width: 25vw;
-  font-size: 5vw;
-  grid-row-gap: 5vw;
+  font-size: 4.5vw;
+  
+  
+  flex-wrap: wrap;
  
 }
   .menuBanner{
