--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -748,7 +748,7 @@ body {
   justify-content: center;
   width: 100vw;
   font-family: 'Mali', cursive;
-  height: 50vh;
+  height: 75vh;
   font-size: 1.75vw;
   font-weight: bold;
   font-stretch: normal;
@@ -802,17 +802,18 @@ body {
   width: 10vw;
 }
 
-.bottom {
+.bottom1 {
   border-bottom: 1.5rem dotted #900010;
   margin: 2vw 5vw;
 }
 
 .buttons1:hover {
-  opacity: .75;
+ background-color: #900010;
 }
 
 span5 {
   color: #900010;
+  font-size: 2vw;
 }
 
 @media (max-width: 600px) {
@@ -868,7 +869,9 @@ margin-left: 8vw;;
  
 }
   
-
+span5 {
+  font-size: 7vw;
+}
 
 
   .line{
@@ -933,5 +936,9 @@ margin-left: 8vw;;
     font-size: 10vw;
     margin-left:2vw;
     margin-right: 3vw;
+  }
+
+  .menus {
+    
   }
 }
