--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -479,8 +479,10 @@ height: 39px;
     width: 100vw;
   }
 
-  .bottom{
+  .bottom1{
     width: 100vw;
+    border-bottom: none;
+    display: none;
   }
 
   .learn1{
@@ -716,18 +718,21 @@ body {
   align-items: baseline;
   justify-content: center;
   border-bottom: 1.5rem dotted #900010;
-  /* margin: 5vw; */
+  margin: 5vw;
   padding: 1vh;
+  margin-top: 0;
+  padding-top: 0;
+  
   
   
   
 }
 
 .menu {
-  width: 266px;
-  height: 57px;
+  width: 8vw;
+  height: 3vh;
   font-family: Muli;
-  font-size: 56px;
+  font-size: 10vw;
   font-weight: normal;
   font-stretch: normal;
   font-style: italic;
@@ -735,8 +740,10 @@ body {
   letter-spacing: normal;
   text-align: center;
   color:#a8091a;
-  font-size: 5vw;
+  font-size: 3.5vw;
   padding: 3vw;
+  padding-top: 0;
+  margin-top: 0;
 
 
 }
@@ -842,6 +849,7 @@ display:none;
 border-bottom: none;
 text-align: left;
 margin: 0;
+padding-bottom: 8vh;
   }
 
   .bottom {
@@ -851,10 +859,10 @@ margin: 0;
     width: 90vw;
     margin: 12vw;
     flex-wrap: wrap;
-    padding: vw;
+    padding: 0vw;
   }
 .menu {
-  font-size: 15vw;
+  font-size: 12vw;
   margin: 0;
 }
 .buttons {
@@ -874,7 +882,7 @@ margin-left: 8vw;;
 }
   
 span5 {
-  font-size: 7vw;
+  font-size: 5vw;
 }
 
 
@@ -942,7 +950,5 @@ span5 {
     margin-right: 3vw;
   }
 
-  .menus {
-    
-  }
+  
 }
